--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -104,3 +104,28 @@ main{
   font-weight: 700;
   font-size: 20px;
 }
+/* what i do section */
+.what-i-do{
+  text-align: center;
+  margin: 130px 100px 0;
+}
+.skills-container{
+  display: flex;
+}
+.skill{
+  text-align: left;
+  margin-right: 24px;
+  padding: 20px;
+  border-radius: 5px;
+  box-shadow: 0px 6px 50px rgba(0, 0, 0, 0.06);
+}
+.skill-name{
+  color: #181818;
+  margin-top: 20px;
+  font-weight: 700;
+  font-size: 20px;
+}
+.skill-description{
+  color: #757575;
+  margin-top: 30px;
+}
